--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ certifi==2017.11.5
 chardet==3.0.4
 idna==2.6
 lxml==4.1.1
+progressbar2==3.34.3
+python-utils==2.2.0
 requests==2.18.4
+six==1.11.0
 urllib3==1.22
